@@ -285,6 +285,7 @@ public class CLProgram extends CLAbstractEntity<cl_program> {
         if (includes == null)
             includes = new ArrayList<String>();
         includes.add(path);
+        resolvedInclusions = null;
     }
 	public synchronized void addSource(String src) {
         if (entity != null)
@@ -497,7 +498,6 @@ public class CLProgram extends CLAbstractEntity<cl_program> {
             for (String path : includes)
                 b.append("-I").append(path).append(' ');
         
-            System.out.println("OpenCL build options = " + b);
         return b.toString();
     }
     
@@ -550,7 +550,7 @@ public class CLProgram extends CLAbstractEntity<cl_program> {
         
         String contentSignature = null;
         File cacheFile = null;
-        
+        boolean readBinaries = false;
         if (isCached()) {
         		try {
         			contentSignature = computeCacheSignature();
@@ -565,6 +565,7 @@ public class CLProgram extends CLAbstractEntity<cl_program> {
 					setBinaries(bins);
 					//createKernels();
 					System.out.println("[JavaCL] Read binaries cache from '" + cacheFile + "'");
+					readBinaries = true;
 				}
         		} catch (Exception ex) {
         			System.err.println("[JavaCL] Failed to load cached program :"); 
@@ -614,7 +615,7 @@ public class CLProgram extends CLAbstractEntity<cl_program> {
         if (deleteTempFiles != null)
         		deleteTempFiles.run();
         
-        	if (isCached()) {
+        	if (isCached() && !readBinaries) {
         		cacheDirectory.mkdirs();
         		try {
         			writeBinaries(getBinaries(), contentSignature, new FileOutputStream(cacheFile));
